tests/accept/simple.ul
int foo(int x) {
    int x;
}

void main() {
     int x;
     float x;
}