tests/reject/func_same_name_2.ul
void foo(int x, int y) {}
void foo(int x, int y) {}

void main() {}